# the-dark-candle

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ai-context.json  debug-output.txt  gemini-assist  issues.json  run-with-debug  test_output.txt  test_output_final.txt
.cargo/: config.toml
.github/workflows/: ci.yml
assets/audio/: README.md
assets/data/: atmosphere_config.ron  fluid_config.ron  goblin.enemy.ron  physics_constants.ron  planet_config.ron  subdivision_config.ron  universal_constants.ron  world_constants.ron
assets/shaders/: aurora.wgsl  sky_dome.wgsl  terrain_caustic.wgsl
docs/: 02_architecture.md  ROADMAP.md  RUST_INSTRUCTIONS.md  SHOWCASES.md  WORKING_WITH_AGENTS.md  advanced-physics.md  agent-capture.md  architecture.md  atmosphere-simulation.md  debugging-and-diagnostics.md  electromagnetism.md  entity-bodies.md  exploration-prompt.md  fluid-simulation-system.md  geodesic-terrain-design.md  nuclear-physics.md  optics-light.md  plan.md  simulation-test-system.md  spherical-terrain.md  structural-construction.md  synthesis-prompt.md  terrain-generation.md  valley-river-milestone.md  voxel-subdivision-system.md
scripts/: check.sh  install-hooks.sh  pre-commit
src/: audio.rs  floating_origin.rs  game_state.rs  hud.rs  interaction.rs  lib.rs  main.rs
src/behavior/: AGENTS.md  behaviors.rs  mod.rs  needs.rs  pathfinding.rs  perception.rs  utility.rs
src/biology/: AGENTS.md  decay.rs  growth.rs  health.rs  metabolism.rs  mod.rs  plants.rs
src/bodies/: ik.rs  injury.rs  locomotion.rs  mod.rs  perception.rs  plant.rs  player.rs  procedural_body.rs  procedural_body_anim.rs  skeleton.rs  tissue.rs
src/building/: AGENTS.md  crafting.rs  demolition.rs  joints.rs  mod.rs  parts.rs  placement.rs  stress.rs
src/camera/: AGENTS.md  mod.rs
src/chemistry/: AGENTS.md  fire_propagation.rs  heat.rs  mod.rs  reactions.rs  runtime.rs  state_transitions.rs
src/data/: AGENTS.md  mod.rs
src/diagnostics/: agent_capture.rs  debug_render.rs  font.rs  frame_budget.rs  mod.rs  state_dump.rs  system_timings.rs  video.rs  visualization.rs
src/entities/: AGENTS.md  inventory.rs  mod.rs
src/gpu/: context.rs  mod.rs  noise_compute.rs  parity.rs  particles.rs  renderer.rs  terrain_projection.rs  voxel_compute.rs
src/lighting/: AGENTS.md  aurora.rs  caustic_tile.rs  caustics.rs  clouds.rs  light_map.rs  mie_local.rs  mod.rs  optics.rs  orbital.rs  refraction.rs  scattering.rs  shadows.rs  sky.rs  sky_dome.rs  terrain_caustic_material.rs
src/map/: AGENTS.md  discovery.rs  global_map.rs  local_map.rs  mod.rs  ui.rs
src/persistence/: load.rs  mod.rs  save.rs  types.rs
src/physics/: AGENTS.md  atmosphere.rs  broad_phase.rs  collision.rs  constants.rs  coupling.rs  fluids.rs  gravity.rs  integrity.rs  mod.rs  narrow_phase.rs  pressure.rs  rigid_body.rs  shapes.rs  solver.rs  voxel_bridge.rs
src/planet/: AGENTS.md  biomes.rs  celestial.rs  detail.rs  geology.rs  gpu_heightmap.rs  grid.rs  impacts.rs  mod.rs  persistence.rs  projections.rs  render.rs  tectonics.rs
src/procgen/: AGENTS.md  biomes.rs  creatures.rs  items.rs  mod.rs  props.rs  spawning.rs  tree.rs
src/simulation/: AGENTS.md  assertions.rs  geometry.rs  mod.rs  scenario.rs
src/sky/: catalogue.rs  cubemap.rs  diffuse.rs  generate.rs  host_galaxy.rs  mod.rs  plugin.rs  spectrum.rs
src/social/: AGENTS.md  factions.rs  group_behaviors.rs  group_systems.rs  mod.rs  relationships.rs  reputation.rs
src/test_support/: mod.rs  stress.rs
tests/: atmosphere_visual.rs  atmosphere_visual_gpu.rs  bouncing_balls.rs  chunk_boundary_visual.rs  gameplay.rs  physics_visual.rs  scenarios.rs  simulations.rs  stress.rs  validate_assets.rs  valley_river_gpu.rs  visual_rendering.rs
(+210 files in other folders)
