[package]
name = "the_dark_candle"
version = "0.1.0"
edition = "2024"
description = "A data-driven voxel game built on Bevy with real-world SI physics and procedural generation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/feinorgh/the-dark-candle"
keywords = ["game", "bevy", "voxel", "ecs", "procedural-generation"]
categories = ["games", "game-engines", "simulation"]

[dependencies]
# Core engine — default features only; platform-specific display backends below.
bevy = { version = "0.18" }
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Data-driven pipeline dependencies
serde = { version = "1.0", features = ["derive"] }
# Allows loading .ron and .yaml files directly as Bevy Assets
bevy_common_assets = { version = "0.15", features = ["ron", "yaml"] }
noise = "0.9.0"
rand = "0.9"
ron = "0.8"
bincode = { version = "2", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["png"] }
wgpu = "27.0"
pollster = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }

# Linux: Wayland for the primary desktop target, X11 for Xvfb / CI.
[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.18", features = ["wayland", "x11"] }

# Enable maximum optimizations for dependencies, but keep your code compiling fast
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dev-dependencies]
glob = "0.3"
approx = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }

# Optimize the final Windows/Linux release build
[profile.release]
lto = "thin"
codegen-units = 1
